--- a/viewpagerdotsindicator-sample/build.gradle
+++ b/viewpagerdotsindicator-sample/build.gradle
@@ -4,7 +4,7 @@ android {
   compileSdkVersion 28
   defaultConfig {
     applicationId "com.tbuonomo.dotsindicatorsample"
-    minSdkVersion 19
+    minSdkVersion 21
     targetSdkVersion 28
     versionCode 1
     versionName "1.0"
@@ -30,7 +30,9 @@ dependencies {
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-  androidTestImplementation('com.schibsted.spain:barista:2.8.0') {
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    androidTestImplementation('com.schibsted.spain:barista:2.8.0') {
     exclude group: 'com.android.support'
     exclude group: 'org.jetbrains.kotlin' // Only if you already use Kotlin in your project
   }
