--- a/viewpagerdotsindicator/build.gradle
+++ b/viewpagerdotsindicator/build.gradle
@@ -4,7 +4,7 @@ android {
   compileSdkVersion 28
 
   defaultConfig {
-    minSdkVersion 15
+    minSdkVersion 21
     targetSdkVersion 28
     versionCode 1
     versionName version
@@ -24,6 +24,7 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   implementation 'com.android.support:appcompat-v7:28.0.0'
   implementation 'com.android.support:support-dynamic-animation:28.0.0'
+  implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
 
 buildscript {
